--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "start": "cross-env SERVER_HOST=dep0.faisvr.cc node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "@jsnetkit/buffer": "^1.1.3",
-    "@jsnetkit/rpc": "^1.1.5"
+    "@jsnetkit/rpc": "^1.1.5",
+    "debug": "^4.1.1",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   }
 }
